--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/axios": "^5.12.2",
+    "@nuxtjs/moment": "^1.6.1",
     "@nuxtjs/toast": "^3.3.1",
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.17.3",
